# funathon-project-housing

./: 1-preprocessing.qmd  2-GB_model.qmd  2-RF_model.qmd  2-model.qmd  3-metrics.qmd  4-logging.qmd  5-deployment.qmd  README.md  index.qmd  intro_data.qmd  pyproject.toml
.github/workflows/: publish.yaml
intermediate_solutions/: 0_fallback.py  1_main.py  2a_main.py  2b_main.py  3_main.py  4_metrics.py  5_api.py
intermediate_solutions/solution_step1/: main.py
intermediate_solutions/solution_step1_to_2/: main.py
intermediate_solutions/solution_step1_to_3/: main.py
solution/: api.py  log_mlflow.py  main.py  metrics.py  pipeline.py  preprocess.py  utils.py
solution/admin/: 1_generate_models.py  extract.sh  extract_all.sh  generate_input_from_raw.py
subject/: 4-metrics.qmd  introduction.qmd
temp/: table_dict.Qmd  temp.py
