[project]
name = "funathon-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb",
    "fastapi",
    "ipykernel",
    "joblib",
    "jupyter",
    "jupyter-cache",
    "matplotlib",
    "mlflow",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic>=2.13.0",
    "requests",
    "s3fs",
    "scikit-learn",
    "tabulate",
    "uvicorn",
]

